
[TestPrimitiveTypes/any - 1]
&dts_parser.PrimitiveType{
    span: 0-3,
}
---

[TestPrimitiveTypes/unknown - 1]
&dts_parser.PrimitiveType{
    Kind: 1,
    span: 0-7,
}
---

[TestPrimitiveTypes/string - 1]
&dts_parser.PrimitiveType{
    Kind: 6,
    span: 0-6,
}
---

[TestPrimitiveTypes/number - 1]
&dts_parser.PrimitiveType{
    Kind: 7,
    span: 0-6,
}
---

[TestPrimitiveTypes/boolean - 1]
&dts_parser.PrimitiveType{
    Kind: 8,
    span: 0-7,
}
---

[TestPrimitiveTypes/symbol - 1]
&dts_parser.PrimitiveType{
    Kind: 10,
    span: 0-6,
}
---

[TestPrimitiveTypes/null - 1]
&dts_parser.PrimitiveType{
    Kind: 3,
    span: 0-4,
}
---

[TestPrimitiveTypes/undefined - 1]
&dts_parser.PrimitiveType{
    Kind: 4,
    span: 0-9,
}
---

[TestPrimitiveTypes/never - 1]
&dts_parser.PrimitiveType{
    Kind: 5,
    span: 0-5,
}
---

[TestLiteralTypes/string_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "hello",
        span: 0-7,
    },
    span: 0-7,
}
---

[TestLiteralTypes/number_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: 42,
        span: 0-2,
    },
    span: 0-2,
}
---

[TestLiteralTypes/boolean_true - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.BooleanLiteral{
        Value: true,
        span: 0-4,
    },
    span: 0-4,
}
---

[TestLiteralTypes/boolean_false - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.BooleanLiteral{
        span: 0-5,
    },
    span: 0-5,
}
---

[TestTypeReferences/simple_identifier - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Foo",
        span: 0-3,
    },
    span: 0-3,
}
---

[TestTypeReferences/qualified_name - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Member{
        Left: &dts_parser.Ident{
            Name: "Foo",
            span: 0-3,
        },
        Right: &dts_parser.Ident{
            Name: "Bar",
            span: 4-7,
        },
    },
    span: 0-7,
}
---

[TestTypeReferences/nested_qualified_name - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Member{
        Left: &dts_parser.Member{
            Left: &dts_parser.Ident{
                Name: "Foo",
                span: 0-3,
            },
            Right: &dts_parser.Ident{
                Name: "Bar",
                span: 4-7,
            },
        },
        Right: &dts_parser.Ident{
            Name: "Baz",
            span: 8-11,
        },
    },
    span: 0-11,
}
---

[TestTypeReferences/with_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Array",
        span: 0-5,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 6-12,
        },
    },
    span: 0-13,
}
---

[TestTypeReferences/with_multiple_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Map",
        span: 0-3,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 4-10,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 12-18,
        },
    },
    span: 0-19,
}
---

[TestTypeReferences/nested_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Array",
        span: 0-5,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Map",
                span: 6-9,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 10-16,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 18-24,
                },
            },
            span: 6-25,
        },
    },
    span: 0-26,
}
---

[TestUnionTypes/simple_union - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 0-6,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 9-15,
        },
    },
    span: 0-15,
}
---

[TestUnionTypes/three_types - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 0-6,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 9-15,
        },
        &dts_parser.PrimitiveType{
            Kind: 8,
            span: 18-25,
        },
    },
    span: 0-25,
}
---

[TestUnionTypes/with_type_refs - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 0-3,
            },
            span: 0-3,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 6-9,
            },
            span: 6-9,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Baz",
                span: 12-15,
            },
            span: 12-15,
        },
    },
    span: 0-15,
}
---

[TestIntersectionTypes/simple_intersection - 1]
&dts_parser.IntersectionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 0-3,
            },
            span: 0-3,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 6-9,
            },
            span: 6-9,
        },
    },
    span: 0-9,
}
---

[TestIntersectionTypes/three_types - 1]
&dts_parser.IntersectionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Foo",
                span: 0-3,
            },
            span: 0-3,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Bar",
                span: 6-9,
            },
            span: 6-9,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Baz",
                span: 12-15,
            },
            span: 12-15,
        },
    },
    span: 0-15,
}
---

[TestParenthesizedTypes/simple_paren - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.PrimitiveType{
        Kind: 6,
        span: 1-7,
    },
    span: 0-8,
}
---

[TestParenthesizedTypes/paren_with_union - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.UnionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 1-7,
            },
            &dts_parser.PrimitiveType{
                Kind: 7,
                span: 10-16,
            },
        },
        span: 1-16,
    },
    span: 0-17,
}
---

[TestParenthesizedTypes/nested_paren - 1]
&dts_parser.ParenthesizedType{
    Type: &dts_parser.ParenthesizedType{
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 2-8,
        },
        span: 1-9,
    },
    span: 0-10,
}
---

[TestComplexUnionIntersectionCombinations/union_of_intersections - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Foo",
                            span: 1-4,
                        },
                        span: 1-4,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Bar",
                            span: 7-10,
                        },
                        span: 7-10,
                    },
                },
                span: 1-10,
            },
            span: 0-11,
        },
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Baz",
                            span: 15-18,
                        },
                        span: 15-18,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "Qux",
                            span: 21-24,
                        },
                        span: 21-24,
                    },
                },
                span: 15-24,
            },
            span: 14-25,
        },
    },
    span: 0-25,
}
---

[TestComplexUnionIntersectionCombinations/intersection_has_higher_precedence - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 0-1,
            },
            span: 0-1,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 4-5,
                    },
                    span: 4-5,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 8-9,
                    },
                    span: 8-9,
                },
            },
            span: 4-9,
        },
    },
    span: 0-9,
}
---

[TestComplexUnionIntersectionCombinations/multiple_levels - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 0-1,
            },
            span: 0-1,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 4-5,
                    },
                    span: 4-5,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 8-9,
                    },
                    span: 8-9,
                },
            },
            span: 4-9,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "D",
                span: 12-13,
            },
            span: 12-13,
        },
    },
    span: 0-13,
}
---

[TestComplexUnionIntersectionCombinations/nested_with_parens - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.ParenthesizedType{
                        Type: &dts_parser.UnionType{
                            Types: []dts_parser.TypeAnn{
                                &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "A",
                                        span: 2-3,
                                    },
                                    span: 2-3,
                                },
                                &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "B",
                                        span: 6-7,
                                    },
                                    span: 6-7,
                                },
                            },
                            span: 2-7,
                        },
                        span: 1-8,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "C",
                            span: 11-12,
                        },
                        span: 11-12,
                    },
                },
                span: 1-12,
            },
            span: 0-13,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "D",
                span: 16-17,
            },
            span: 16-17,
        },
    },
    span: 0-17,
}
---

[TestComplexUnionIntersectionCombinations/complex_with_type_args - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Array",
                span: 0-5,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 6-12,
                },
            },
            span: 0-13,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Map",
                        span: 16-19,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.PrimitiveType{
                            Kind: 6,
                            span: 20-26,
                        },
                        &dts_parser.PrimitiveType{
                            Kind: 7,
                            span: 28-34,
                        },
                    },
                    span: 16-35,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Set",
                        span: 38-41,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.PrimitiveType{
                            Kind: 8,
                            span: 42-49,
                        },
                    },
                    span: 38-50,
                },
            },
            span: 16-50,
        },
    },
    span: 0-50,
}
---

[TestTypeReferenceEdgeCases/single_type_arg - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Promise",
        span: 0-7,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 2,
            span: 8-12,
        },
    },
    span: 0-13,
}
---

[TestTypeReferenceEdgeCases/deeply_nested_qualified_name - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Member{
        Left: &dts_parser.Member{
            Left: &dts_parser.Member{
                Left: &dts_parser.Member{
                    Left: &dts_parser.Ident{
                        Name: "A",
                        span: 0-1,
                    },
                    Right: &dts_parser.Ident{
                        Name: "B",
                        span: 2-3,
                    },
                },
                Right: &dts_parser.Ident{
                    Name: "C",
                    span: 4-5,
                },
            },
            Right: &dts_parser.Ident{
                Name: "D",
                span: 6-7,
            },
        },
        Right: &dts_parser.Ident{
            Name: "E",
            span: 8-9,
        },
    },
    span: 0-9,
}
---

[TestTypeReferenceEdgeCases/type_args_with_union - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Result",
        span: 0-6,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 6,
                    span: 7-13,
                },
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 16-22,
                },
            },
            span: 7-22,
        },
    },
    span: 0-23,
}
---

[TestTypeReferenceEdgeCases/type_args_with_intersection - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Combined",
        span: 0-8,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Foo",
                        span: 9-12,
                    },
                    span: 9-12,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Bar",
                        span: 15-18,
                    },
                    span: 15-18,
                },
            },
            span: 9-18,
        },
    },
    span: 0-19,
}
---

[TestTypeReferenceEdgeCases/deeply_nested_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "A",
        span: 0-1,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "B",
                span: 2-3,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 4-5,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "D",
                                span: 6-7,
                            },
                            TypeArgs: []dts_parser.TypeAnn{
                                &dts_parser.TypeReference{
                                    Name: &dts_parser.Ident{
                                        Name: "E",
                                        span: 8-9,
                                    },
                                    span: 8-9,
                                },
                            },
                            span: 6-10,
                        },
                    },
                    span: 4-11,
                },
            },
            span: 2-12,
        },
    },
    span: 0-13,
}
---

[TestTypeReferenceEdgeCases/multiple_qualified_names_with_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Member{
        Left: &dts_parser.Ident{
            Name: "Foo",
            span: 0-3,
        },
        Right: &dts_parser.Ident{
            Name: "Bar",
            span: 4-7,
        },
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Member{
                Left: &dts_parser.Ident{
                    Name: "Baz",
                    span: 8-11,
                },
                Right: &dts_parser.Ident{
                    Name: "Qux",
                    span: 12-15,
                },
            },
            span: 8-15,
        },
    },
    span: 0-16,
}
---

[TestParseModule/empty_module - 1]
&dts_parser.Module{}
---

[TestParseModule/module_with_line_comments - 1]
&dts_parser.Module{}
---

[TestParseModule/module_with_block_comments - 1]
&dts_parser.Module{}
---

[TestParseModule/module_with_mixed_comments - 1]
&dts_parser.Module{}
---

[TestNegativeLiterals/negative_number - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.LiteralType{
        Literal: &dts_parser.NumberLiteral{
            Value: -42,
            span: 0-3,
        },
        span: 0-3,
    },
}
---

[TestNegativeLiterals/negative_float - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.LiteralType{
        Literal: &dts_parser.NumberLiteral{
            Value: -3.14,
            span: 0-5,
        },
        span: 0-5,
    },
}
---

[TestWhitespaceHandling/union_with_spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.UnionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 0-6,
            },
            &dts_parser.PrimitiveType{
                Kind: 7,
                span: 11-17,
            },
        },
        span: 0-17,
    },
}
---

[TestWhitespaceHandling/intersection_with_spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.IntersectionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Foo",
                    span: 0-3,
                },
                span: 0-3,
            },
            &dts_parser.TypeReference{
                Name: &dts_parser.Ident{
                    Name: "Bar",
                    span: 8-11,
                },
                span: 8-11,
            },
        },
        span: 0-11,
    },
}
---

[TestWhitespaceHandling/type_args_with_spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TypeReference{
        Name: &dts_parser.Ident{
            Name: "Array",
            span: 0-5,
        },
        TypeArgs: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 8-14,
            },
        },
        span: 0-16,
    },
}
---

[TestWhitespaceHandling/qualified_name_with_spaces_around_dots - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TypeReference{
        Name: &dts_parser.Member{
            Left: &dts_parser.Member{
                Left: &dts_parser.Ident{
                    Name: "Foo",
                    span: 0-3,
                },
                Right: &dts_parser.Ident{
                    Name: "Bar",
                    span: 6-9,
                },
            },
            Right: &dts_parser.Ident{
                Name: "Baz",
                span: 12-15,
            },
        },
        span: 0-15,
    },
}
---

[TestWhitespaceHandling/parens_with_spaces - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.ParenthesizedType{
        Type: &dts_parser.PrimitiveType{
            Kind: 6,
            span: 3-9,
        },
        span: 0-12,
    },
}
---

[TestWhitespaceHandling/newlines_in_union - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.UnionType{
        Types: []dts_parser.TypeAnn{
            &dts_parser.PrimitiveType{
                Kind: 6,
                span: 0-6,
            },
            &dts_parser.PrimitiveType{
                Kind: 7,
                span: 9-15,
            },
            &dts_parser.PrimitiveType{
                Kind: 8,
                span: 18-25,
            },
        },
        span: 0-25,
    },
}
---

[TestMixedOperatorPrecedence/intersection_binds_tighter_than_union - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 0-1,
            },
            span: 0-1,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 4-5,
                    },
                    span: 4-5,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 8-9,
                    },
                    span: 8-9,
                },
            },
            span: 4-9,
        },
    },
    span: 0-9,
}
---

[TestMixedOperatorPrecedence/multiple_intersections_in_union - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "A",
                        span: 0-1,
                    },
                    span: 0-1,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 4-5,
                    },
                    span: 4-5,
                },
            },
            span: 0-5,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 8-9,
                    },
                    span: 8-9,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "D",
                        span: 12-13,
                    },
                    span: 12-13,
                },
            },
            span: 8-13,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "E",
                        span: 16-17,
                    },
                    span: 16-17,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "F",
                        span: 20-21,
                    },
                    span: 20-21,
                },
            },
            span: 16-21,
        },
    },
    span: 0-21,
}
---

[TestMixedOperatorPrecedence/parentheses_override_precedence - 1]
&dts_parser.IntersectionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "A",
                            span: 1-2,
                        },
                        span: 1-2,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "B",
                            span: 5-6,
                        },
                        span: 5-6,
                    },
                },
                span: 1-6,
            },
            span: 0-7,
        },
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.UnionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "C",
                            span: 11-12,
                        },
                        span: 11-12,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "D",
                            span: 15-16,
                        },
                        span: 15-16,
                    },
                },
                span: 11-16,
            },
            span: 10-17,
        },
    },
    span: 0-17,
}
---

[TestMixedOperatorPrecedence/complex_nested_structure - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 0-1,
            },
            span: 0-1,
        },
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "B",
                        span: 4-5,
                    },
                    span: 4-5,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 8-9,
                    },
                    span: 8-9,
                },
            },
            span: 4-9,
        },
        &dts_parser.ParenthesizedType{
            Type: &dts_parser.IntersectionType{
                Types: []dts_parser.TypeAnn{
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "D",
                            span: 13-14,
                        },
                        span: 13-14,
                    },
                    &dts_parser.TypeReference{
                        Name: &dts_parser.Ident{
                            Name: "E",
                            span: 17-18,
                        },
                        span: 17-18,
                    },
                },
                span: 13-18,
            },
            span: 12-19,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "F",
                span: 22-23,
            },
            span: 22-23,
        },
    },
    span: 0-23,
}
---

[TestSingleCharacterTypes/single_letter_type - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "T",
        span: 0-1,
    },
    span: 0-1,
}
---

[TestSingleCharacterTypes/single_char_string_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "a",
        span: 0-3,
    },
    span: 0-3,
}
---

[TestSingleCharacterTypes/single_digit_number_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: 1,
        span: 0-1,
    },
    span: 0-1,
}
---

[TestSingleCharacterTypes/zero_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        span: 0-1,
    },
    span: 0-1,
}
---

[TestQualifiedIdentifierBoundaries/two_parts - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TypeReference{
        Name: &dts_parser.Member{
            Left: &dts_parser.Ident{
                Name: "A",
                span: 0-1,
            },
            Right: &dts_parser.Ident{
                Name: "B",
                span: 2-3,
            },
        },
        span: 0-3,
    },
}
---

[TestQualifiedIdentifierBoundaries/ten_parts - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": &dts_parser.TypeReference{
        Name: &dts_parser.Member{
            Left: &dts_parser.Member{
                Left: &dts_parser.Member{
                    Left: &dts_parser.Member{
                        Left: &dts_parser.Member{
                            Left: &dts_parser.Member{
                                Left: &dts_parser.Member{
                                    Left: &dts_parser.Member{
                                        Left: &dts_parser.Member{
                                            Left: &dts_parser.Ident{
                                                Name: "A",
                                                span: 0-1,
                                            },
                                            Right: &dts_parser.Ident{
                                                Name: "B",
                                                span: 2-3,
                                            },
                                        },
                                        Right: &dts_parser.Ident{
                                            Name: "C",
                                            span: 4-5,
                                        },
                                    },
                                    Right: &dts_parser.Ident{
                                        Name: "D",
                                        span: 6-7,
                                    },
                                },
                                Right: &dts_parser.Ident{
                                    Name: "E",
                                    span: 8-9,
                                },
                            },
                            Right: &dts_parser.Ident{
                                Name: "F",
                                span: 10-11,
                            },
                        },
                        Right: &dts_parser.Ident{
                            Name: "G",
                            span: 12-13,
                        },
                    },
                    Right: &dts_parser.Ident{
                        Name: "H",
                        span: 14-15,
                    },
                },
                Right: &dts_parser.Ident{
                    Name: "I",
                    span: 16-17,
                },
            },
            Right: &dts_parser.Ident{
                Name: "J",
                span: 18-19,
            },
        },
        span: 0-19,
    },
}
---

[TestQualifiedIdentifierBoundaries/single_identifier_followed_by_dot - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{
        &dts_parser.Error{
            Span: 2-2,
            Message: "Expected identifier after '.'",
        },
    },
    "typeAnn": nil,
}
---

[TestQualifiedIdentifierBoundaries/starts_with_dot - 1]
map[string]interface {}{
    "errors": []*dts_parser.Error{},
    "typeAnn": nil,
}
---

[TestTypeArgumentsBoundaries/single_arg_no_spaces - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "A",
        span: 0-1,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "B",
                span: 2-3,
            },
            span: 2-3,
        },
    },
    span: 0-4,
}
---

[TestTypeArgumentsBoundaries/ten_type_args - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Fn",
        span: 0-2,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "A",
                span: 3-4,
            },
            span: 3-4,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "B",
                span: 6-7,
            },
            span: 6-7,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "C",
                span: 9-10,
            },
            span: 9-10,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "D",
                span: 12-13,
            },
            span: 12-13,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "E",
                span: 15-16,
            },
            span: 15-16,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "F",
                span: 18-19,
            },
            span: 18-19,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "G",
                span: 21-22,
            },
            span: 21-22,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "H",
                span: 24-25,
            },
            span: 24-25,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "I",
                span: 27-28,
            },
            span: 27-28,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "J",
                span: 30-31,
            },
            span: 30-31,
        },
    },
    span: 0-32,
}
---

[TestTypeArgumentsBoundaries/nested_three_levels - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "A",
        span: 0-1,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "B",
                span: 2-3,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "C",
                        span: 4-5,
                    },
                    TypeArgs: []dts_parser.TypeAnn{
                        &dts_parser.TypeReference{
                            Name: &dts_parser.Ident{
                                Name: "D",
                                span: 6-7,
                            },
                            span: 6-7,
                        },
                    },
                    span: 4-8,
                },
            },
            span: 2-9,
        },
    },
    span: 0-10,
}
---

[TestTypeArgumentsBoundaries/mixed_primitives_and_refs - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Map",
        span: 0-3,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 4-10,
        },
        &dts_parser.TypeReference{
            Name: &dts_parser.Ident{
                Name: "Array",
                span: 12-17,
            },
            TypeArgs: []dts_parser.TypeAnn{
                &dts_parser.PrimitiveType{
                    Kind: 7,
                    span: 18-24,
                },
            },
            span: 12-25,
        },
    },
    span: 0-26,
}
---

[TestTypeArgumentsBoundaries/union_in_type_arg - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Result",
        span: 0-6,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.UnionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Success",
                        span: 7-14,
                    },
                    span: 7-14,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Error",
                        span: 17-22,
                    },
                    span: 17-22,
                },
            },
            span: 7-22,
        },
    },
    span: 0-23,
}
---

[TestTypeArgumentsBoundaries/intersection_in_type_arg - 1]
&dts_parser.TypeReference{
    Name: &dts_parser.Ident{
        Name: "Combined",
        span: 0-8,
    },
    TypeArgs: []dts_parser.TypeAnn{
        &dts_parser.IntersectionType{
            Types: []dts_parser.TypeAnn{
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Base",
                        span: 9-13,
                    },
                    span: 9-13,
                },
                &dts_parser.TypeReference{
                    Name: &dts_parser.Ident{
                        Name: "Mixin",
                        span: 16-21,
                    },
                    span: 16-21,
                },
            },
            span: 9-21,
        },
    },
    span: 0-22,
}
---

[TestStringLiteralVariations/empty_string - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        span: 0-2,
    },
    span: 0-2,
}
---

[TestStringLiteralVariations/string_with_spaces - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "hello world",
        span: 0-13,
    },
    span: 0-13,
}
---

[TestStringLiteralVariations/string_with_special_chars - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "hello\\nworld",
        span: 0-14,
    },
    span: 0-14,
}
---

[TestStringLiteralVariations/string_with_unicode - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.StringLiteral{
        Value: "hello 🌍",
        span: 0-12,
    },
    span: 0-12,
}
---

[TestModuleWithUnexpectedTokens/random_characters - 1]
map[string]interface {}{
    "errors": 10,
    "module": &dts_parser.Module{},
}
---

[TestModuleWithUnexpectedTokens/partial_type - 1]
map[string]interface {}{
    "errors": 4,
    "module": &dts_parser.Module{},
}
---

[TestModuleWithUnexpectedTokens/mismatched_brackets - 1]
map[string]interface {}{
    "errors": 12,
    "module": &dts_parser.Module{},
}
---

[TestModuleWithUnexpectedTokens/number_at_start - 1]
map[string]interface {}{
    "errors": 2,
    "module": &dts_parser.Module{},
}
---

[TestLiteralTypes/negative_number_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: -1,
        span: 0-2,
    },
    span: 0-2,
}
---

[TestLiteralTypes/negative_decimal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: -3.14,
        span: 0-5,
    },
    span: 0-5,
}
---

[TestLiteralTypes/hex_literal - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: 255,
        span: 0-4,
    },
    span: 0-4,
}
---

[TestLiteralTypes/negative_hex - 1]
&dts_parser.LiteralType{
    Literal: &dts_parser.NumberLiteral{
        Value: -255,
        span: 0-5,
    },
    span: 0-5,
}
---

[TestUnionTypes/with_leading_pipe - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 2-8,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 11-17,
        },
    },
    span: 0-17,
}
---

[TestUnionTypes/with_leading_pipe_three_types - 1]
&dts_parser.UnionType{
    Types: []dts_parser.TypeAnn{
        &dts_parser.PrimitiveType{
            Kind: 6,
            span: 2-8,
        },
        &dts_parser.PrimitiveType{
            Kind: 7,
            span: 11-17,
        },
        &dts_parser.PrimitiveType{
            Kind: 8,
            span: 20-27,
        },
    },
    span: 0-27,
}
---
